# codex-moonside-lamp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.json  install_hooks.py  pyproject.toml
.github/workflows/: tests.yml
codex_moonside/: __init__.py  config.py  daemon.py  doctor.py  hook.py  hooks_config.py  logging_utils.py  moonside_ble.py  state.py
docs/media/: README.md
examples/: codex-moonside-daemon.plist  hooks.json
macos/MenuBarApp/: README.md
macos/MenuBarApp/Scripts/: package-app
macos/MenuBarApp/Sources/CodexMoonsideMenuBar/: main.m
scripts/: codex-moonside-daemon  codex-moonside-doctor  codex-moonside-hook  install-macos-service  setup-local  uninstall-macos-service
tests/: test_ble_commands.py  test_config.py  test_daemon.py  test_doctor.py  test_hook_session.py  test_install_hooks.py  test_state.py
